2011-04-01  rocky <rocky@gnu.org>

	* tests/scripts/features/recursion, tests/scripts/variables/MAKE: In
	tests, $make_path works better than #MAKEFILE# on cygwin.

2011-03-31  rocky <rocky@gnu.org>

	* ChangeLog, NEWS.remake: Get ready for release 0.5

2011-03-31  rocky <rocky@gnu.org>

	* debugger/cmd.c, debugger/command/comment.h,
	debugger/command/expand.h, debugger/command/print.h,
	debugger/command/pwd.h, debugger/command/quit.h,
	debugger/command/run.h, debugger/command/set.h,
	debugger/command/setq.h, debugger/command/shell.h,
	debugger/command/show.h, debugger/command/source.h,
	debugger/command/step.h, debugger/command/target.h,
	debugger/command/up.h, debugger/command/where.h,
	debugger/command/write.h: Finish revising command structure
	initialization calls.

2011-03-31  rocky <rocky@gnu.org>

	* Makefile.am: Don't install reremake. Thanks to Rainer Müller for
	pointing out the problem.

2011-03-30  rocky <rocky@gnu.org>

	* NEWS, configure.in, debugger/cmd.c, debugger/command/break.h,
	debugger/command/chdir.h, debugger/command/continue.h,
	debugger/command/delete.h, debugger/command/down.h,
	debugger/command/edit.h, debugger/command/eval.h,
	debugger/command/finish.h, debugger/command/frame.h,
	debugger/command/help.h, debugger/command/info.h,
	debugger/command/list.h, debugger/command/next.h,
	debugger/command/skip.h, tests/spec/data/break-all.right,
	tests/spec/data/break-end.right,
	tests/spec/data/break-expand.right,
	tests/spec/data/break-prereq.right,
	tests/spec/data/break-run.right, tests/spec/data/continue.right,
	tests/spec/data/step3.right: Correct history count. Start revising
	command init functions.

2011-03-28  rocky <rocky@gnu.org>

	* debugger/cmd.c: And another instance

2011-03-28  rocky <rocky@gnu.org>

	* NEWS, NEWS.remake, debugger/command/source.h: Remove unused return
	value warning

2011-03-28  rocky <rocky@gnu.org>

	* Makefile.am, debugger/cmd.c, debugger/cmd.h,